# rag-app

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.streamlit/: secrets.toml.example
src/config/: config.py  logs.py
src/modules/: db.py  load_documents.py  rag.py  streamlit_ui.py
src/prompts/: rag.jinja2
